[package]
name = "poc-framework"
version = "0.3.1"
authors = []
edition = "2018"
repository = "https://github.com/joestakey/solana-poc-framework"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [ "solana", "smart", "contracts",]
description = "A framework for creating PoC's for Solana Smart Contracts in a painless and intuitive way"

[dependencies]
itertools = "0.10.1"
bincode = "1.3.3"
rand = "0.7.3"
borsh = "0.9.1"
solana-sdk = "=1.18.26"
solana-program = "=1.18.26"
solana-logger = "=1.18.26"
solana-runtime = "=1.18.26"
solana-transaction-status = "=1.18.26"
solana-cli-output = "=1.18.26"
solana-bpf-loader-program = "=1.18.26"
solana-compute-budget-program = "=1.18.26"
solana-vote-program = "=1.18.26"
solana-stake-program = "=1.18.26"
solana-config-program = "=1.18.26"
solana-client = "=1.18.26"
solana-faucet = "=1.18.26"
solana-program-runtime = "=1.18.26"
solana-ledger = "=1.18.26"
solana-accounts-db = "=1.18.26"
spl-token = "=4.0.0"
spl-token-2022 = "=1.0.0"
spl-memo = "=4.0.0"
spl-associated-token-account = "=2.3.0"
serde = "1.0.125"
sha2 = "0.10.2"
libsecp256k1 = "0.7.1"
sha3 = "0.10.0"
hex = "0.4.3"
once_cell = "1.9.0"

[patch.crates-io]
time = { git = "https://github.com/time-rs/time.git", tag = "v0.3.35" }